changes to fix swagger documentation
